fix(welcome-page) Fix narrow mode - enable calendar card and footer on narrow mode

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -31,10 +31,6 @@
             }
         }
 
-        .welcome-tabs {
-            display: none;
-        }
-
         .header-text-title {
             text-align: center;
         }
@@ -55,13 +51,6 @@
 
         .welcome-footer-row-block {
             display: block;
-        }
-        .welcome-badge {
-            margin-right: 16px;
-        }
-
-        .welcome-footer {
-            display: none;
         }
     }
 }
